# serializer version: 1
# name: test_build_example
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-f8a3cb91/example-a-f8a3cb91-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_f8a3cb91"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_f8a3cb91"]
        
        [project]
        name = "example-a-f8a3cb91"
        version = "1.0.0"
        dependencies = [
            "example-b-f8a3cb91>1.0.0",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-f8a3cb91/example-a-f8a3cb91-1.0.0/src/example_a_f8a3cb91/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-f8a3cb91/example-b-f8a3cb91-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_f8a3cb91"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_f8a3cb91"]
        
        [project]
        name = "example-b-f8a3cb91"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-f8a3cb91/example-b-f8a3cb91-1.0.0/src/example_b_f8a3cb91/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-f8a3cb91/example-b-f8a3cb91-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_f8a3cb91"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_f8a3cb91"]
        
        [project]
        name = "example-b-f8a3cb91"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-f8a3cb91/example-b-f8a3cb91-2.0.0/src/example_b_f8a3cb91/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-f8a3cb91/example-b-f8a3cb91-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_f8a3cb91"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_f8a3cb91"]
        
        [project]
        name = "example-b-f8a3cb91"
        version = "3.0.0"
        dependencies = [
            "example-c-f8a3cb91",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-f8a3cb91/example-b-f8a3cb91-3.0.0/src/example_b_f8a3cb91/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'build/example-f8a3cb91/example-f8a3cb91-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_f8a3cb91"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_f8a3cb91"]
        
        [project]
        name = "example-f8a3cb91"
        version = "0.0.0"
        dependencies = [
            "example-a-f8a3cb91",
        ]
        requires-python = ">=3.8"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
        
        [project.optional-dependencies]
  
      ''',
      'build/example-f8a3cb91/example-f8a3cb91-0.0.0/src/example_f8a3cb91/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'dist/example-f8a3cb91/example_a_f8a3cb91-1.0.0-py3-none-any.whl': 'md5:c8391f58830135b3a08a34f3db244218',
      'dist/example-f8a3cb91/example_a_f8a3cb91-1.0.0.tar.gz': 'md5:158f27a095b2f9dc7933ac0df2adf574',
      'dist/example-f8a3cb91/example_b_f8a3cb91-1.0.0-py3-none-any.whl': 'md5:d3a9e0b925221324f9a5a83781a03452',
      'dist/example-f8a3cb91/example_b_f8a3cb91-1.0.0.tar.gz': 'md5:97dd53eb1ccf28faf4f1e42615d5df9c',
      'dist/example-f8a3cb91/example_b_f8a3cb91-2.0.0-py3-none-any.whl': 'md5:98184870c70a235008d5faa1d18ceb47',
      'dist/example-f8a3cb91/example_b_f8a3cb91-2.0.0.tar.gz': 'md5:645e0ff7f010847a6939abbcffeee77e',
      'dist/example-f8a3cb91/example_b_f8a3cb91-3.0.0-py3-none-any.whl': 'md5:899030e8a49b89c48ea5172d68fc850b',
      'dist/example-f8a3cb91/example_b_f8a3cb91-3.0.0.tar.gz': 'md5:091a2d09f26f0b2096a5d957a41df597',
      'dist/example-f8a3cb91/example_f8a3cb91-0.0.0.tar.gz': 'md5:14fc1a43c305da7cbe4a1aaca5e3b30c',
      'tree': '''
        test_build_example0
        ├── build
        │   └── example-f8a3cb91
        │       ├── example-a-f8a3cb91-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_f8a3cb91
        │       │           └── __init__.py
        │       ├── example-b-f8a3cb91-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_f8a3cb91
        │       │           └── __init__.py
        │       ├── example-b-f8a3cb91-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_f8a3cb91
        │       │           └── __init__.py
        │       ├── example-b-f8a3cb91-3.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_f8a3cb91
        │       │           └── __init__.py
        │       └── example-f8a3cb91-0.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_f8a3cb91
        │                   └── __init__.py
        └── dist
            └── example-f8a3cb91
                ├── example_a_f8a3cb91-1.0.0-py3-none-any.whl
                ├── example_a_f8a3cb91-1.0.0.tar.gz
                ├── example_b_f8a3cb91-1.0.0-py3-none-any.whl
                ├── example_b_f8a3cb91-1.0.0.tar.gz
                ├── example_b_f8a3cb91-2.0.0-py3-none-any.whl
                ├── example_b_f8a3cb91-2.0.0.tar.gz
                ├── example_b_f8a3cb91-3.0.0-py3-none-any.whl
                ├── example_b_f8a3cb91-3.0.0.tar.gz
                └── example_f8a3cb91-0.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-f8a3cb91
  
    ''',
  })
# ---
# name: test_build_example_already_exists
  dict({
    'exit_code': 1,
    'filesystem': dict({
      'tree': '''
        test_build_example_already_exi0
        └── build
            └── example-f8a3cb91
        
        2 directories
  
      ''',
    }),
    'stderr': '''
      Building 'example-f8a3cb91' in directory 'build/example-f8a3cb91'
      Destination directory '[PWD]/build/example-f8a3cb91' already exists. Pass `--rm` to allow removal.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_example_already_exists_with_rm_flag
  dict({
    'exit_code': 0,
    'stderr': '<not included>',
    'stdout': '''
      example-f8a3cb91
  
    ''',
  })
# ---
# name: test_build_example_short_names
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-f8a3cb91/a-f8a3cb91-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/a_f8a3cb91"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/a_f8a3cb91"]
        
        [project]
        name = "a-f8a3cb91"
        version = "1.0.0"
        dependencies = [
            "b-f8a3cb91>1.0.0",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-f8a3cb91/a-f8a3cb91-1.0.0/src/a_f8a3cb91/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-f8a3cb91/b-f8a3cb91-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_f8a3cb91"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_f8a3cb91"]
        
        [project]
        name = "b-f8a3cb91"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-f8a3cb91/b-f8a3cb91-1.0.0/src/b_f8a3cb91/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-f8a3cb91/b-f8a3cb91-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_f8a3cb91"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_f8a3cb91"]
        
        [project]
        name = "b-f8a3cb91"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-f8a3cb91/b-f8a3cb91-2.0.0/src/b_f8a3cb91/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-f8a3cb91/b-f8a3cb91-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_f8a3cb91"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_f8a3cb91"]
        
        [project]
        name = "b-f8a3cb91"
        version = "3.0.0"
        dependencies = [
            "c-f8a3cb91",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-f8a3cb91/b-f8a3cb91-3.0.0/src/b_f8a3cb91/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'build/example-f8a3cb91/example-f8a3cb91-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_f8a3cb91"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_f8a3cb91"]
        
        [project]
        name = "example-f8a3cb91"
        version = "0.0.0"
        dependencies = [
            "a-f8a3cb91",
        ]
        requires-python = ">=3.8"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
        
        [project.optional-dependencies]
  
      ''',
      'build/example-f8a3cb91/example-f8a3cb91-0.0.0/src/example_f8a3cb91/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'dist/example-f8a3cb91/a_f8a3cb91-1.0.0-py3-none-any.whl': 'md5:e99934821f19318d0fcc0777624420f1',
      'dist/example-f8a3cb91/a_f8a3cb91-1.0.0.tar.gz': 'md5:085d4200d741087057a6e2da61635b3d',
      'dist/example-f8a3cb91/b_f8a3cb91-1.0.0-py3-none-any.whl': 'md5:1fcb053b25b135db4a36037593d84b97',
      'dist/example-f8a3cb91/b_f8a3cb91-1.0.0.tar.gz': 'md5:33fdcef9e4e3c01368be55c8fcb7da85',
      'dist/example-f8a3cb91/b_f8a3cb91-2.0.0-py3-none-any.whl': 'md5:7bfdbb953b8fb1bec268883b0547b52e',
      'dist/example-f8a3cb91/b_f8a3cb91-2.0.0.tar.gz': 'md5:0d0d254ed52923e922b0c8f7cbf9bbc4',
      'dist/example-f8a3cb91/b_f8a3cb91-3.0.0-py3-none-any.whl': 'md5:8426357d010c50f379206a3041d480c2',
      'dist/example-f8a3cb91/b_f8a3cb91-3.0.0.tar.gz': 'md5:5276ec0c6ea2b0dddd7d17b08d01ce09',
      'dist/example-f8a3cb91/example_f8a3cb91-0.0.0.tar.gz': 'md5:415a6e6596f5d7f7d800f980c09773ee',
      'tree': '''
        test_build_example_short_names0
        ├── build
        │   └── example-f8a3cb91
        │       ├── a-f8a3cb91-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── a_f8a3cb91
        │       │           └── __init__.py
        │       ├── b-f8a3cb91-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_f8a3cb91
        │       │           └── __init__.py
        │       ├── b-f8a3cb91-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_f8a3cb91
        │       │           └── __init__.py
        │       ├── b-f8a3cb91-3.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_f8a3cb91
        │       │           └── __init__.py
        │       └── example-f8a3cb91-0.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_f8a3cb91
        │                   └── __init__.py
        └── dist
            └── example-f8a3cb91
                ├── a_f8a3cb91-1.0.0-py3-none-any.whl
                ├── a_f8a3cb91-1.0.0.tar.gz
                ├── b_f8a3cb91-1.0.0-py3-none-any.whl
                ├── b_f8a3cb91-1.0.0.tar.gz
                ├── b_f8a3cb91-2.0.0-py3-none-any.whl
                ├── b_f8a3cb91-2.0.0.tar.gz
                ├── b_f8a3cb91-3.0.0-py3-none-any.whl
                ├── b_f8a3cb91-3.0.0.tar.gz
                └── example_f8a3cb91-0.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-f8a3cb91
  
    ''',
  })
# ---
# name: test_build_example_with_seed
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-c146ef11/example-a-c146ef11-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_c146ef11"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_c146ef11"]
        
        [project]
        name = "example-a-c146ef11"
        version = "1.0.0"
        dependencies = [
            "example-b-c146ef11>1.0.0",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-c146ef11/example-a-c146ef11-1.0.0/src/example_a_c146ef11/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-c146ef11/example-b-c146ef11-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_c146ef11"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_c146ef11"]
        
        [project]
        name = "example-b-c146ef11"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-c146ef11/example-b-c146ef11-1.0.0/src/example_b_c146ef11/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-c146ef11/example-b-c146ef11-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_c146ef11"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_c146ef11"]
        
        [project]
        name = "example-b-c146ef11"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-c146ef11/example-b-c146ef11-2.0.0/src/example_b_c146ef11/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-c146ef11/example-b-c146ef11-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_c146ef11"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_c146ef11"]
        
        [project]
        name = "example-b-c146ef11"
        version = "3.0.0"
        dependencies = [
            "example-c-c146ef11",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-c146ef11/example-b-c146ef11-3.0.0/src/example_b_c146ef11/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'build/example-c146ef11/example-c146ef11-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_c146ef11"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_c146ef11"]
        
        [project]
        name = "example-c146ef11"
        version = "0.0.0"
        dependencies = [
            "example-a-c146ef11",
        ]
        requires-python = ">=3.8"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
        
        [project.optional-dependencies]
  
      ''',
      'build/example-c146ef11/example-c146ef11-0.0.0/src/example_c146ef11/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'dist/example-c146ef11/example_a_c146ef11-1.0.0-py3-none-any.whl': 'md5:3c39ae7c2e14e8bba6007003f6b35a4b',
      'dist/example-c146ef11/example_a_c146ef11-1.0.0.tar.gz': 'md5:c93ce6cc9855cb289fbd1cc80d4f083c',
      'dist/example-c146ef11/example_b_c146ef11-1.0.0-py3-none-any.whl': 'md5:c69a2d44acae1f562caad0375d0bf591',
      'dist/example-c146ef11/example_b_c146ef11-1.0.0.tar.gz': 'md5:1a017dd9f42f3e2940e4afa223fe5c1a',
      'dist/example-c146ef11/example_b_c146ef11-2.0.0-py3-none-any.whl': 'md5:1fb23260d6ac6c8907e522477bc78101',
      'dist/example-c146ef11/example_b_c146ef11-2.0.0.tar.gz': 'md5:2dbf7872243dd809f163d65fc50157c8',
      'dist/example-c146ef11/example_b_c146ef11-3.0.0-py3-none-any.whl': 'md5:af71fad23f02f5a518548169cd7f6be9',
      'dist/example-c146ef11/example_b_c146ef11-3.0.0.tar.gz': 'md5:ea0966043ed06d298b1b47c608736427',
      'dist/example-c146ef11/example_c146ef11-0.0.0.tar.gz': 'md5:f491c662aa789dcc1e5c48be8ede2e4d',
      'tree': '''
        test_build_example_with_seed0
        ├── build
        │   └── example-c146ef11
        │       ├── example-a-c146ef11-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_c146ef11
        │       │           └── __init__.py
        │       ├── example-b-c146ef11-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_c146ef11
        │       │           └── __init__.py
        │       ├── example-b-c146ef11-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_c146ef11
        │       │           └── __init__.py
        │       ├── example-b-c146ef11-3.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_c146ef11
        │       │           └── __init__.py
        │       └── example-c146ef11-0.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_c146ef11
        │                   └── __init__.py
        └── dist
            └── example-c146ef11
                ├── example_a_c146ef11-1.0.0-py3-none-any.whl
                ├── example_a_c146ef11-1.0.0.tar.gz
                ├── example_b_c146ef11-1.0.0-py3-none-any.whl
                ├── example_b_c146ef11-1.0.0.tar.gz
                ├── example_b_c146ef11-2.0.0-py3-none-any.whl
                ├── example_b_c146ef11-2.0.0.tar.gz
                ├── example_b_c146ef11-3.0.0-py3-none-any.whl
                ├── example_b_c146ef11-3.0.0.tar.gz
                └── example_c146ef11-0.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-c146ef11
  
    ''',
  })
# ---
# name: test_build_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_no_target
  dict({
    'exit_code': 2,
    'stderr': '''
      usage: packse build [-h] [--rm] [--short-names] [--skip-root] [-v] [-q]
                          targets [targets ...]
      packse build: error: the following arguments are required: targets
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
